Desktop mostly completed
Lots of work done on desktop versions

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -29,6 +29,7 @@
             <ul>
                 <li style="padding-left: 0px;"><a href="index.html">Home</a></li>
                 <li><a href="exhibitions.html">Exhibitions</a></li>
+                <li><a href="explore.html">Explore</a></li>
                 <li><a href="visit.html">Visit us</a></li>
                 <li><a href="about.html">About us</a></li>
             </ul>
@@ -91,6 +92,18 @@
                             future is here. You can even say hello and shake the hand of Rob the Robot.</p>
                     </div>
                     <img src="images/robot-g72f1c395e_1920.jpg" class="exhib-img">
+                </div>
+            </div>
+            <div class="exhibition" id="black">
+                <div class="exhib-content">
+                    <div class="exhib-txt">
+                        <h2>Ecology</h2>
+                        <p>As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.
+
+                        In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution. But we also focus on the positive ways we can all contribute to a brighter future.
+                        </p>
+                    </div>
+                    <img src="images/smart-agriculture-iot-with-hand-planting-tree-background.jpg" class="exhib-img">
                 </div>
             </div>
         </div>
