--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <ul>
                 <li style="padding-left: 0px;"><a href="index.html">Home</a></li>
                 <li><a href="exhibitions.html">Exhibitions</a></li>
+                <li><a href="explore.html">Explore</a></li>
                 <li><a href="visit.html">Visit us</a></li>
                 <li><a href="about.html">About us</a></li>
             </ul>
@@ -53,13 +54,18 @@
                         <h3>Exhibitions</h3>
                     </div>
                 </a>
-                <a href="visit.html">
+                <a href="explore.html">
                     <div class="card" id="card-2">
+                        <h3>Explore</h3>
+                    </div>
+                </a>
+                <a href="visit.html">
+                    <div class="card" id="card-3">
                         <h3>Visit us</h3>
                     </div>
                 </a>
                 <a href="about.html">
-                    <div class="card" id="card-3">
+                    <div class="card" id="card-4">
                         <h3>About us</h3>
                     </div>
                 </a>
