--- a/visit.html
+++ b/visit.html
@@ -21,6 +21,8 @@
 <body>
     <header>
         <div id="logo"><a href="/">Community Science Museum</a></div>
+        <input type="checkbox" id="menu-checkbox" aria-label="Mobile navigation menu">
+        <label for="menu-checkbox" class="hamburger-icon" aria-label="Hamburger icon for mobile nav"><b>MENU</b> <i class="fa-solid fa-bars"></i></label>
         <div class="opening-hours">
             <p>Opening hours: 09:00 - 17:00</p>
         </div>
@@ -49,13 +51,13 @@
                         <p>San Francisco, 94118</p>
                         <h2>Admission:</h2>
                         <p><u>The entrance is free for all.</u></p>
-                        <p>There are guided tours of the museum that leave every hour. These tours are 70 NOK per person
+                        <p>There are guided tours of the museum that leave every hour. These tours are $6 per person
                             and include a handy printed guide of the museum.</p>
                         <h2>Opening hours:</h2>
                         <p>Monday to Saturday from 09:00 to 17:00</p>
                         <h2>Special requests:</h2>
                         <p>If you're a school or similar looking for special requests you can contact us at:</p>
-                        <p><b>contact@csm.com</b></p>
+                        <a href="mailto:contact@csm.com"><b>contact@csm.com</b></a>
                     </div>
                     <img src="images/scott-webb-102825.jpg">
                 </div>
