--- a/explore.html
+++ b/explore.html
@@ -21,6 +21,8 @@
 <body>
     <header>
         <div id="logo"><a href="/">Community Science Museum</a></div>
+        <input type="checkbox" id="menu-checkbox" aria-label="Mobile navigation menu">
+        <label for="menu-checkbox" class="hamburger-icon" aria-label="Hamburger icon for mobile nav"><b>MENU</b> <i class="fa-solid fa-bars"></i></label>
         <div class="opening-hours">
             <p>Opening hours: 09:00 - 17:00</p>
         </div>
