Updates to mobile menu, color changes

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -34,6 +34,7 @@
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="visit.html">Visit us</a></li>
                 <li><a href="about.html">About us</a></li>
+                <li class="mobile-search"><a><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
             </ul>
         </nav>
         <div class="search">
@@ -43,7 +44,7 @@
     <main>
         <h1 class="title">Exhibitions</h1>
         <div class="exhibitions">
-            <div class="exhibition" id="black">
+            <div class="exhibition">
                 <div class="exhib-content">
                     <div class="exhib-txt">
                         <h2>Cosmology</h2>
@@ -55,7 +56,7 @@
                     <img src="images/celso-405219.jpg" class="exhib-img">
                 </div>
             </div>
-            <div class="exhibition">
+            <div class="exhibition" id="alternate">
                 <div class="exhib-content">
                     <div class="exhib-txt">
                         <h2>Evolution</h2>
@@ -70,7 +71,7 @@
                     <img src="images/mammoth-1257288_1920.jpg" class="exhib-img">
                 </div>
             </div>
-            <div class="exhibition" id="black">
+            <div class="exhibition">
                 <div class="exhib-content">
                     <div class="exhib-txt">
                         <h2>Biology and Medicine</h2>
@@ -85,7 +86,7 @@
                     <img src="images/heart-2607178_1920.jpg" class="exhib-img">
                 </div>
             </div>
-            <div class="exhibition">
+            <div class="exhibition" id="alternate">
                 <div class="exhib-content">
                     <div class="exhib-txt">
                         <h2>Robotics and AI</h2>
@@ -96,7 +97,7 @@
                     <img src="images/robot-g72f1c395e_1920.jpg" class="exhib-img">
                 </div>
             </div>
-            <div class="exhibition" id="black">
+            <div class="exhibition">
                 <div class="exhib-content">
                     <div class="exhib-txt">
                         <h2>Ecology</h2>
