--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="visit.html">Visit us</a></li>
                 <li><a href="about.html">About us</a></li>
+                <li class="mobile-search"><a><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
             </ul>
         </nav>
         <div class="search">
