Added active class to nav
The active class now shows what page you're on in the nav

--- a/explore.html
+++ b/explore.html
@@ -31,7 +31,7 @@
             <ul>
                 <li style="padding-left: 0px;"><a href="index.html">Home</a></li>
                 <li><a href="exhibitions.html">Exhibitions</a></li>
-                <li><a href="explore.html">Explore</a></li>
+                <li><a href="explore.html" class="active">Explore</a></li>
                 <li><a href="visit.html">Visit us</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li class="mobile-search"><a><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
