--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="break"></div>
         <nav class="nav">
             <ul>
-                <li style="padding-left: 0px;"><a href="index.html">Home</a></li>
+                <li style="padding-left: 0px;"><a href="index.html" class="active">Home</a></li>
                 <li><a href="exhibitions.html">Exhibitions</a></li>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="visit.html">Visit us</a></li>
