--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                 <li><a href="exhibitions.html">Exhibitions</a></li>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="visit.html">Visit us</a></li>
-                <li><a href="about.html">About us</a></li>
+                <li><a href="about.html" class="active">About us</a></li>
                 <li class="mobile-search"><a><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
             </ul>
         </nav>
