--- a/exhibitions.html
+++ b/exhibitions.html
@@ -30,7 +30,7 @@
         <nav class="nav">
             <ul>
                 <li style="padding-left: 0px;"><a href="index.html">Home</a></li>
-                <li><a href="exhibitions.html">Exhibitions</a></li>
+                <li><a href="exhibitions.html" class="active">Exhibitions</a></li>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="visit.html">Visit us</a></li>
                 <li><a href="about.html">About us</a></li>
