--- a/visit.html
+++ b/visit.html
@@ -32,7 +32,7 @@
                 <li style="padding-left: 0px;"><a href="index.html">Home</a></li>
                 <li><a href="exhibitions.html">Exhibitions</a></li>
                 <li><a href="explore.html">Explore</a></li>
-                <li><a href="visit.html">Visit us</a></li>
+                <li><a href="visit.html" class="active">Visit us</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li class="mobile-search"><a><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
             </ul>
