WAVE tool fixes

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                         <p style="margin-bottom: 5px;">Phone: (906)498-1420</p>
                         <p style="margin-top: 5px;">Email: contact@csm.com</p>
                     </div>
-                    <img class="about-img" src="images/samuel-zeller-158996.jpg">
+                    <img class="about-img" src="images/samuel-zeller-158996.jpg" alt="A boy wearing a virtual reality headset.">
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="f-content">
             <div class="f-content-flex">
                 <div class="f-address-logo">
-                    <p class="f-logo">Community Science Museum</p>
+                    <h3 class="f-logo">Community Science Museum</h3>
                     <p>1409 Roosevelt Street</p>
                     <p>San Francisco, 94118</p>
                     <p>Phone: (906)498-1420</p>
