--- a/exhibitions.html
+++ b/exhibitions.html
@@ -53,7 +53,7 @@
                             various constellations and galaxies that can be seen and learn a bit about the early
                             navigators who used the stars to travel by.</p>
                     </div>
-                    <img src="images/celso-405219.jpg" class="exhib-img">
+                    <img src="images/celso-405219.jpg" class="exhib-img" alt="Cosmology image containing the moon">
                 </div>
             </div>
             <div class="exhibition" id="alternate">
@@ -68,7 +68,7 @@
                             our time. You can also take some time to meet a few of the creatures who didn’t survive,
                             including our Woolly.</p>
                     </div>
-                    <img src="images/mammoth-1257288_1920.jpg" class="exhib-img">
+                    <img src="images/mammoth-1257288_1920.jpg" class="exhib-img" alt="Evolution image containing a mammoth skeleton.">
                 </div>
             </div>
             <div class="exhibition">
@@ -83,7 +83,7 @@
                             we explore the history of medicine and take a look at some major breakthroughs including the
                             discovery of penicillin and the first heart transplant.</p>
                     </div>
-                    <img src="images/heart-2607178_1920.jpg" class="exhib-img">
+                    <img src="images/heart-2607178_1920.jpg" class="exhib-img" alt="Biology and medicine image containing a human heart exhibit.">
                 </div>
             </div>
             <div class="exhibition" id="alternate">
@@ -94,7 +94,7 @@
                             of the future. From useful home applications of AI to industrial uses of robotics, the
                             future is here. You can even say hello and shake the hand of Rob the Robot.</p>
                     </div>
-                    <img src="images/robot-g72f1c395e_1920.jpg" class="exhib-img">
+                    <img src="images/robot-g72f1c395e_1920.jpg" class="exhib-img" alt="Robotics and AI image containing a robot.">
                 </div>
             </div>
             <div class="exhibition">
@@ -106,7 +106,7 @@
                         In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution. But we also focus on the positive ways we can all contribute to a brighter future.
                         </p>
                     </div>
-                    <img src="images/smart-agriculture-iot-with-hand-planting-tree-background.jpg" class="exhib-img">
+                    <img src="images/smart-agriculture-iot-with-hand-planting-tree-background.jpg" class="exhib-img" alt="Ecology image containing a human holding dirt in his hands.">
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
         <div class="f-content">
             <div class="f-content-flex">
                 <div class="f-address-logo">
-                    <p class="f-logo">Community Science Museum</p>
+                    <h3 class="f-logo">Community Science Museum</h3>
                     <p>1409 Roosevelt Street</p>
                     <p>San Francisco, 94118</p>
                     <p>Phone: (906)498-1420</p>
