--- a/explore.html
+++ b/explore.html
@@ -53,7 +53,7 @@
                         <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.</p>
                         <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.</p>
                     </div>
-                    <img src="images/boys-girls-standing-chatting-after-school-lesson.jpg">
+                    <img src="images/boys-girls-standing-chatting-after-school-lesson.jpg" alt="Four kids chatting after school.">
                 </div>
                 <div class="for-teachers">
                     <div class="text">
@@ -61,14 +61,14 @@
                         <p>As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.</p>
                         <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
                     </div>
-                    <img src="images/side-view-kids-learning-sunday-school.jpg">
+                    <img src="images/side-view-kids-learning-sunday-school.jpg" alt="Teacher helping out kids in a classroom.">
                 </div>
                 <div class="researchers" style="border: none;">
                     <div class="text">
                         <h2>Researchers</h2>
                         <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
                     </div>
-                    <img src="images/people-219985_1280.jpg">
+                    <img src="images/people-219985_1280.jpg" alt="A scientist looking into a microscope.">
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
         <div class="f-content">
             <div class="f-content-flex">
                 <div class="f-address-logo">
-                    <p class="f-logo">Community Science Museum</p>
+                    <h3 class="f-logo">Community Science Museum</h3>
                     <p>1409 Roosevelt Street</p>
                     <p>San Francisco, 94118</p>
                     <p>Phone: (906)498-1420</p>
