--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="f-content">
             <div class="f-content-flex">
                 <div class="f-address-logo">
-                    <p class="f-logo">Community Science Museum</p>
+                    <h3 class="f-logo">Community Science Museum</h3>
                     <p>1409 Roosevelt Street</p>
                     <p>San Francisco, 94118</p>
                     <p>Phone: (906)498-1420</p>
