--- a/visit.html
+++ b/visit.html
@@ -51,7 +51,7 @@
                         <p>1409 Roosevelt Street</p>
                         <p>San Francisco, 94118</p>
                         <h2>Admission:</h2>
-                        <p><u>The entrance is free for all.</u></p>
+                        <p style="font-weight: var(--Medium);">The entrance is free for all.</p>
                         <p>There are guided tours of the museum that leave every hour. These tours are $6 per person
                             and include a handy printed guide of the museum.</p>
                         <h2>Opening hours:</h2>
@@ -60,7 +60,7 @@
                         <p>If you're a school or similar looking for special requests you can contact us at:</p>
                         <a href="mailto:contact@csm.com"><b>contact@csm.com</b></a>
                     </div>
-                    <img src="images/scott-webb-102825.jpg">
+                    <img src="images/scott-webb-102825.jpg" alt="The outside of a museum.">
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
         <div class="f-content">
             <div class="f-content-flex">
                 <div class="f-address-logo">
-                    <p class="f-logo">Community Science Museum</p>
+                    <h3 class="f-logo">Community Science Museum</h3>
                     <p>1409 Roosevelt Street</p>
                     <p>San Francisco, 94118</p>
                     <p>Phone: (906)498-1420</p>
