--- a/exhibitions.html
+++ b/exhibitions.html
@@ -56,7 +56,7 @@
                     <img src="images/celso-405219.jpg" class="exhib-img" alt="Cosmology image containing the moon">
                 </div>
             </div>
-            <div class="exhibition" id="alternate">
+            <div class="exhibition" style="background-color: var(--theme);">
                 <div class="exhib-content">
                     <div class="exhib-txt">
                         <h2>Evolution</h2>
@@ -86,7 +86,7 @@
                     <img src="images/heart-2607178_1920.jpg" class="exhib-img" alt="Biology and medicine image containing a human heart exhibit.">
                 </div>
             </div>
-            <div class="exhibition" id="alternate">
+            <div class="exhibition" style="background-color: var(--theme);">
                 <div class="exhib-content">
                     <div class="exhib-txt">
                         <h2>Robotics and AI</h2>
