--- a/explore.html
+++ b/explore.html
@@ -15,6 +15,7 @@
     <link href="css/explore.css" rel="stylesheet">
     <link href="css/navigation-footer.css" rel="stylesheet">
     <title>Explore | Community Science Museum</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <meta name="description" content="Explore the Community Science Museum.">
 </head>
 
