--- a/visit.html
+++ b/visit.html
@@ -15,6 +15,7 @@
     <link href="css/visit_about.css" rel="stylesheet">
     <link href="css/navigation-footer.css" rel="stylesheet">
     <title>Visit Us | Community Science Museum</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <meta name="description" content="Read about how to visit us at the Community Science Museum!">
 </head>
 
