--- a/exhibitions.html
+++ b/exhibitions.html
@@ -15,6 +15,7 @@
     <link href="css/exhibitions.css" rel="stylesheet">
     <link href="css/navigation-footer.css" rel="stylesheet">
     <title>Exhibitions | Community Science Museum</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <meta name="description" content="Explore our exhibitions at the Community Science Museum.">
 </head>
 
