--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="css/frontpage.css" rel="stylesheet">
     <link href="css/navigation-footer.css" rel="stylesheet">
     <title>Explore Together | Community Science Museum</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <meta name="description"
         content="Come join us at the Community Science Museum where we’re committed to making science accessible to all.">
 </head>
