--- a/explore.html
+++ b/explore.html
@@ -16,7 +16,7 @@
     <link href="css/navigation-footer.css" rel="stylesheet">
     <title>Explore | Community Science Museum</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <meta name="description" content="Explore the Community Science Museum.">
+    <meta name="description" content="Explore the Community Science Museum for kids, teachers and researchers.">
 </head>
 
 <body>
