--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <link href="css/navigation-footer.css" rel="stylesheet">
     <title>About Us | Community Science Museum</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <meta name="description" content="Read about the Community Science Museum!">
+    <meta name="description" content="Read about the Community Science Museum.">
 </head>
 
 <body>
