--- a/exhibitions.html
+++ b/exhibitions.html
@@ -50,9 +50,7 @@
                     <div class="exhib-txt">
                         <h2>Cosmology</h2>
                         <p>Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the
-                            night sky and what we can see and know about the universe around us. We’ll locate the
-                            various constellations and galaxies that can be seen and learn a bit about the early
-                            navigators who used the stars to travel by.</p>
+                        night sky and what we can see and know about the universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by.</p>
                     </div>
                     <img src="images/celso-405219.jpg" class="exhib-img" alt="Cosmology image containing the moon">
                 </div>
@@ -62,12 +60,9 @@
                     <div class="exhib-txt">
                         <h2>Evolution</h2>
                         <p>For centuries, philosophers and scientists have wrestled with the question of our origins.
-                            Where do we come from and how did we get here? Since Darwin proposed his theory of evolution
-                            we have had a framework for exploring and understanding our place in this world.
+                        Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
 
-                            Discover the origins of life on this planet and how the species we know today have evolved
-                            our time. You can also take some time to meet a few of the creatures who didn’t survive,
-                            including our Woolly.</p>
+                        Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly.</p>
                     </div>
                     <img src="images/mammoth-1257288_1920.jpg" class="exhib-img" alt="Evolution image containing a mammoth skeleton.">
                 </div>
@@ -77,12 +72,9 @@
                     <div class="exhib-txt">
                         <h2>Biology and Medicine</h2>
                         <p>From micro-organisms to the human body, major breakthroughs in biology are offering us unique
-                            insights into the great wonders of the tiny world.
+                        insights into the great wonders of the tiny world.
 
-                            For many people their life expectancy is much longer and their quality of life much
-                            improved, thanks to the growth of our understanding of medicine. Over a series of exhibits
-                            we explore the history of medicine and take a look at some major breakthroughs including the
-                            discovery of penicillin and the first heart transplant.</p>
+                        For many people their life expectancy is much longer and their quality of life much improved, thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the history of medicine and take a look at some major breakthroughs including the discovery of penicillin and the first heart transplant.</p>
                     </div>
                     <img src="images/heart-2607178_1920.jpg" class="exhib-img" alt="Biology and medicine image containing a human heart exhibit.">
                 </div>
@@ -91,9 +83,7 @@
                 <div class="exhib-content">
                     <div class="exhib-txt">
                         <h2>Robotics and AI</h2>
-                        <p>The information revolution is here and robotics and artificial intelligence are the science
-                            of the future. From useful home applications of AI to industrial uses of robotics, the
-                            future is here. You can even say hello and shake the hand of Rob the Robot.</p>
+                        <p>The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.</p>
                     </div>
                     <img src="images/robot-g72f1c395e_1920.jpg" class="exhib-img" alt="Robotics and AI image containing a robot.">
                 </div>
